# ArmenifyMe_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backend_adittional_logic.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main-ci.yml
ArmenifyMe/: celery.py  manage.py  middleware.py  settings.py  urls.py
ArmenifyMe/ArmenifyMe/: asgi.py  settings.py  urls.py  wsgi.py
ArmenifyMe/armenify_server/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  views.py
ArmenifyMe/armenify_server/management/commands/: seed_words.py
ArmenifyMe/armenify_server/migrations/: 0001_initial.py  0002_chat_answer_idempotency_and_progress_version.py  0003_userwordprogress_manual_override.py  0003_wordcomment.py  0004_userchathistory.py  0005_merge_0003_wordcomment_0004_userchathistory.py
analytics_service/: .env.example  Dockerfile  manage.py  pyproject.toml
analytics_service/analytics/: models.py  tasks.py  views.py
analytics_service/analytics/migrations/: 0001_initial.py
analytics_service/analytics_service/: __init__.py  api.py  asgi.py  celery.py  celery_app.py  config.py  db.py  init_db.py  main.py  models.py  repositories.py  schemas.py  settings.py  tasks.py  urls.py  wsgi.py
analytics_service/migrations/: README  env.py
analytics_service/migrations/versions/: 20260304_0001_create_analytics_user_table.py  20260304_0002_create_user_answers_table.py
djangoBack/: asgi.py  settings.py  urls.py  wsgi.py
djangoBack/armenify_server/: apps.py  models.py  serializers.py  views.py
djangoBack/armenify_server/management/commands/: seed_words.py
djangoBack/armenify_server/migrations/: 0001_initial.py
