[tool.poetry]
name = "djangoback"
version = "0.1.0"
description = "DRF backend for Armenian learning app"
authors = ["r1bell <sanamyanraph@gmail.com>"]
readme = "README.md"
packages = [{ include = "djangoBack" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "6.0.1"
djangorestframework = "3.16.1"
psycopg = { version = "3.3.2", extras = ["binary"] }
drf-spectacular = "0.29.0"
djangorestframework-simplejwt = "5.5.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
