[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "Analytics microservice"
authors = ["r1bell <sanamyanraph@gmail.com>"]
packages = [{ include = "analytics_service" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.116.1"
uvicorn = { version = "0.35.0", extras = ["standard"] }
psycopg = { version = "3.3.2", extras = ["binary"] }
sqlalchemy = "2.0.43"
alembic = "1.16.4"
celery = "5.4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
